--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -36,7 +36,7 @@
 
    --font-size-sidebar: 1rem;
    --font-size-tool: 0.8rem;
-   --scrollbar-width: 15px;  /* for webkit and chrome */
+   --scrollbar-width: 20px;  /* for webkit and chrome */
    --table-vert-border-width: 0px;
    --table-horiz-border-width: 0px;
    --header-tool-height: 2.5rem;
